--- a/smartthings/cloudbuild.yaml
+++ b/smartthings/cloudbuild.yaml
@@ -1,11 +1,19 @@
 steps:
   - name: gcr.io/cloud-builders/docker
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/amd64-smartthings-mqtt-bridge', '.']
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/aarch64-smartthings-mqtt-bridge', '--build-arg', 'PLATFORM=aarch64', '.']
+    waitFor: ['-']
+  - name: gcr.io/cloud-builders/docker
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/amd64-smartthings-mqtt-bridge', '--build-arg', 'PLATFORM=amd64', '.']
+    waitFor: ['-']
+  - name: gcr.io/cloud-builders/docker
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/armhf-smartthings-mqtt-bridge', '--build-arg', 'PLATFORM=armhf', '.']
+    waitFor: ['-']
+  - name: gcr.io/cloud-builders/docker
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/i386-smartthings-mqtt-bridge', '--build-arg', 'PLATFORM=i386', '.']
+    waitFor: ['-']
 
 images:
+  - gcr.io/$PROJECT_ID/aarch64-smartthings-mqtt-bridge
   - gcr.io/$PROJECT_ID/amd64-smartthings-mqtt-bridge
-
-  # armhf
-  # amd64
-  # i386
-  # aarch64
+  - gcr.io/$PROJECT_ID/armhf-smartthings-mqtt-bridge
+  - gcr.io/$PROJECT_ID/i386-smartthings-mqtt-bridge
